devsecops/k8s/apps/frontend/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/tbernacchi/k8s-devsecops-pipeline-frontend:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /frontend/healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /frontend/healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
  strategy:
    canary:
      canaryService: frontend-canary
      stableService: frontend-stable
      trafficRouting:
        plugins:
          argoproj-labs/traefik:
            service: frontend-stable
            weightedTraefikServiceName: frontend-wtrs
      steps:
        - setWeight: 20
        - pause: {duration: 2m}
        - analysis:
            templates:
              - templateName: error-rate
        - setWeight: 50
        - pause: {duration: 2m}
        - analysis:
            templates:
              - templateName: error-rate
        - setWeight: 100
