devsecops/k8s/apps/frontend/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-stable
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
