devsecops/k8s/apps/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-httproute
  namespace: app-frontend
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /frontend
      backendRefs:
        - name: frontend-stable
          port: 8000
          weight: 100
        - name: frontend-canary
          port: 8000
          weight: 0
