devsecops/k8s/apps/frontend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: app
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/frontend`)
      kind: Rule
      services:
        - name: frontend-wtrs
          kind: TraefikService
